--- a/bancandes/src/main/resources/templates/clientes.html
+++ b/bancandes/src/main/resources/templates/clientes.html
@@ -36,7 +36,7 @@
                         <td th:text="${cliente.departamento}"></td>
                         <td th:text="${cliente.codigoPostal}"></td>
                         <td th:text="${cliente.ciudad}"></td>
-                        <td th:text="${cliente.tipoDocumento}"></td>
+                        <td th:text="${cliente.TipoDocumento}"></td>
                         <td>
                             <a th:href="@{clientes/{numDocumento}/edit(numDocumento=${cliente.numDocumento})}">
                                 Editar
