--- a/bancandes/src/main/resources/templates/fragments/gerenteGeneralForm.html
+++ b/bancandes/src/main/resources/templates/fragments/gerenteGeneralForm.html
@@ -12,8 +12,8 @@
         <h1 class="text-center" th:text="${titulo}"></h1>
         <form>
             <label class="col-form-label">Numero de documento</label>
-            <input class="form-control" type="text" id="numDocumento"
-            name="numDocumento" required th:value="${gerentegeneral.numDocumento}"/>
+            <input class="form-control" type="text" id="num_documento"
+            name="num_documento" required th:value="${gerentegeneral.num_documento}"/>
             <label class="col-form-label">Telefono</label>
             <input class="form-control" type="text" id="telefono"
             name="telefono" required th:value="${gerentegeneral.telefono}"/>
@@ -24,27 +24,27 @@
             <input class="form-control" type="text" id="nacionalidad"
             name="nacionalidad" required th:value="${gerentegeneral.nacionalidad}"/>
             <label class="col-form-label">Direccion Fisica</label>
-            <input class="form-control" type="text" id="direccionFisica"
-            name="direccionFisica" required th:value="${gerentegeneral.direccionFisica}"/>
+            <input class="form-control" type="text" id="direccion_fisica"
+            name="direccion_fisica" required th:value="${gerentegeneral.direccion_fisica}"/>
             <label class="col-form-label">Direccion Electronica</label>
-            <input class="form-control" type="text" id="direccionElectronica"
-            name="direccionElectronica" required th:value="${gerentegeneral.direccionElectronica}"/>
+            <input class="form-control" type="text" id="direccion_electronica"
+            name="direccion_electronica" required th:value="${gerentegeneral.direccion_electronica}"/>
             <label class="col-form-label">Departamento</label>
             <input class="form-control" type="text" id="departamento"
             name="departamento" required th:value="${gerentegeneral.departamento}"/>
             <label class="col-form-label">Codigo Postal</label>
             <input class="form-control" type="text" id="codigo_postal"
-            name="codigoPostal" required th:value="${gerentegeneral.codigoPostal}"/>
+            name="codigo_postal" required th:value="${gerentegeneral.codigo_postal}"/>
             <label class="col-form-label">Ciudad</label>
             <input class="form-control" type="text" id="ciudad"
             name="ciudad" required th:value="${gerentegeneral.ciudad}"/>
             <label class="col-form-label">Tipo Documento</label>
-            <select class="form-control" id="TipoDocumento"
-            name="TipoDocumento" required>
-                <option value="NIT" th:selected="${gerentegeneral.TipoDocumento eq 'NIT'}">
+            <select class="form-control" id="tipo_documento"
+            name="tipo_documento" required>
+                <option value="NIT" th:selected="${gerentegeneral.tipo_documento eq 'NIT'}">
                     NIT
                 </option>
-                <option value="CC" th:selected="${gerentegeneral.TipoDocumento eq 'CC'}">
+                <option value="CC" th:selected="${gerentegeneral.tipo_documento eq 'CC'}">
                     CC
                 </option>
             </select>
